--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="id.sch.smktelkom_mlg.learn.login.MainActivity">
+    tools:context="xiirpl508182838.project.smktelkom_mlg.sch.id.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
