--- a/app/src/main/res/menu/menu_navigasi.xml
+++ b/app/src/main/res/menu/menu_navigasi.xml
@@ -2,21 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item android:id="@+id/home"
-            android:title="Home"
-            android:icon="@drawable/ic_home_black_24dp"/>
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="Home" />
         <item android:id="@+id/settings"
-            android:title="About Us"
-            android:icon="@drawable/ic_person_black_24dp"/>
-        <item android:id="@+id/logout"
-            android:title="Exit"
-            android:icon="@drawable/ic_close_black_24dp"/>
+            android:icon="@drawable/ic_person_black_24dp"
+            android:title="About Us" />
         <item android:id="@+id/add"
-            android:title="Add"
-            android:icon="@drawable/ic_add_black_24dp"/>
+            android:icon="@drawable/ic_add_black_24dp"
+            android:title="Add" />
         <item android:id="@+id/help"
-            android:title="Help"
-            android:icon="@drawable/ic_help_black_24dp"/>
-
+            android:icon="@drawable/ic_help_black_24dp"
+            android:title="Help" />
+        <item
+            android:id="@+id/logout"
+            android:icon="@drawable/ic_close_black_24dp"
+            android:title="Logout" />
 
     </group>
 
