--- a/app/src/main/res/layout/reg.xml
+++ b/app/src/main/res/layout/reg.xml
@@ -21,7 +21,7 @@
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:gravity="center"
-            android:text="Form Pendaftaran Raja Kost"
+            android:text="Form Tambah Kost"
             android:textSize="24dp" />
 
         <EditText
