--- a/app/src/main/res/layout/daftar.xml
+++ b/app/src/main/res/layout/daftar.xml
@@ -7,31 +7,6 @@
     android:weightSum="1">
 
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="49dp"
-        android:ems="10"
-        android:gravity="center_vertical|center|clip_horizontal"
-        android:inputType="textPersonName"
-        android:text="Email" />
-
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/editTextPassword"
-        android:ems="10"
-        android:gravity="center_vertical|center"
-        android:inputType="textPersonName"
-        android:text="Password" />
-
     <TextView
         android:id="@+id/textViewLogin"
         android:layout_width="match_parent"
@@ -39,15 +14,46 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="17dp"
         android:gravity="center"
-        android:text="Register" />
+        android:text="Register"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
 
     <Button
         android:id="@+id/buttonRegister"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Button" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="56dp"
+        android:text="Register" />
+
+    <EditText
+        android:id="@+id/editTextEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textViewLogin"
+        android:layout_gravity="center"
+        android:layout_marginTop="78dp"
+        android:ems="10"
+        android:gravity="center_vertical|center|clip_horizontal"
+        android:hint="Email"
+        android:inputType="textEmailAddress" />
+
+    <EditText
+        android:id="@+id/editTextPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/editTextEmail"
+        android:ems="10"
+        android:gravity="center_vertical|center"
+        android:hint="Password"
+        android:inputType="textPassword" />
+
 
 </RelativeLayout>
