--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -3,15 +3,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_about"
             android:icon="@drawable/ic_person_pin_black_24dp"
             android:title="About Us" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_help"
             android:icon="@drawable/ic_live_help_black_24dp"
             android:title="Bantuan" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_logout"
             android:icon="@drawable/ic_power_settings_new_black_24dp"
             android:title="Logout" />
     </group>
