--- a/app/src/main/res/layout/reg.xml
+++ b/app/src/main/res/layout/reg.xml
@@ -114,6 +114,14 @@
             android:layout_height="wrap_content" />
 
         <Button
+            android:id="@+id/buttonGaleri"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:text="Pilih Foto Kos dari Galeri" />
+
+        <Button
+            android:id="@+id/buttonSimpan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="120dp"
